@@ -1,3 +1,7 @@
+2010-08-03	Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Updated copyright notices of aide.h, aide.c, be.c, compare_db.h,
+	  compare_db.c and db_disk.c
+
 2010-08-02	Richard van den Berg  <richard@vdberg.org>
 	* Removed ], from version string when --with-curl was used, closes bug 3038382
 
